# AvelineAwakes-AI

./: Cargo.toml  README.md
autonomy/: character.json
aveline/: aveline.toml
aveline/proof/: error.rs
examples/src/: main.rs
examples/src/characters/: aveline.toml
src/characteristics/: adjectives.rs
src/core/: agent.rs
src/providers/: twitter.rs
